--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,5 @@
-Tobias Weber <tobias.weber@tum.de>
+Tobias Weber 
+	- Mail 1 (Univ.): tobias.weber@tum.de
+	- Mail 2 (Univ.): q9758011@studium.fernuni-hagen.de
+	- orcid: 0000-0002-7230-1932
+	- ident: 486fbae61c79af61ae9217361601098d7dd367380692f116995b0b81ab3b3407
